test/extern/fnPtrs/cantCallCFnPtr.good
cantCallCFnPtr.chpl:2: error: Can't call a C function pointer within Chapel
cantCallCFnPtr.chpl:3: error: Can't call a C function pointer within Chapel
cantCallCFnPtr.chpl:4: error: Can't call a C function pointer within Chapel
