test/extern/fnPtrs/cantCallCFnPtr.chpl
var x: c_fn_ptr;
x();
x(1);
x(x);

